--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,10 +3,10 @@
 
     <div class="d-flex align-items-center justify-content-between">
         <a routerLink="/" class="logo d-flex align-items-center">
-            <img src="./assets/img/logo.png" alt="" height="60rem">
+            <img src="./assets/img/logo.png" alt="">
             <span class="d-none d-lg-block"> ACACYPAC</span>
         </a>
-        <!-- <i class="bi bi-list toggle-sidebar-btn"></i> -->
+        <i class="bi bi-list toggle-sidebar-btn"></i>
     </div>
 
     <nav class="header-nav ms-auto">
