PORTAL: Permisos para ver el menu segun el cargo

--- a/src/app/pages/collaborator/collaborator.component.html
+++ b/src/app/pages/collaborator/collaborator.component.html
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                         <div class="modal-footer footer">
-                            <button type="button" class="btn btn-secondary" (click)="cancelar();">
+                            <button type="button" class="btn btn-secondary" (click)="cancelar();" routerLink="/dashboard/list-collaborator">
                                 Cancelar
                             </button>
                             <button type="submit" class="btn btn-primary" id="btnGuardar" [disabled]="!formUser.valid">
