--- a/src/app/pages/datatable/datatable.component.html
+++ b/src/app/pages/datatable/datatable.component.html
@@ -24,7 +24,7 @@
                     <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/collaborator', item.id]">
                         <i class="bi bi-pencil-square"></i>
                     </a>
-                    <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarColaborador(item.id)">
+                    <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarColaborador(item.id)" *ngIf="Id != item.id">
                         <i class="bi bi-trash"></i>
                     </a>
                     <a type="button" class="btn btn-outline-warning ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Desbloquear" (click)="desbloquear(item.id)" *ngIf="item.intentos == 0">
