--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -40,7 +40,7 @@
                 </li>
             </ul>
         </li> -->
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="permisos == 1">
             <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
             <i class="bi bi-people-fill"></i><span>Colaboradores</span><i class="bi bi-chevron-down ms-auto"></i>
             </a>
@@ -52,5 +52,207 @@
                 </li>
             </ul>
         </li><!-- End Charts Nav -->
+
+
+        <li class="nav-heading">Documentos</li>
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#politicas-nav" data-bs-toggle="collapse" href="#">
+            <i class="bi bi-folder-fill"></i><span>Políticas</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="politicas-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 1</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 2</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 3</span>
+                </a>
+              </li>
+            </ul>
+        </li><!-- End Icons Nav -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#reglamento-nav" data-bs-toggle="collapse" href="#">
+            <i class="bi bi-folder-fill"></i><span>Reglamento</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="reglamento-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 1</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 2</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 3</span>
+                </a>
+              </li>
+            </ul>
+        </li><!-- End Icons Nav -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#manual-nav" data-bs-toggle="collapse" href="#">
+            <i class="bi bi-folder-fill"></i><span>Manual</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="manual-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 1</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 2</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 3</span>
+                </a>
+              </li>
+            </ul>
+        </li><!-- End Icons Nav -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#instructivo-nav" data-bs-toggle="collapse" href="#">
+            <i class="bi bi-folder-fill"></i><span>Intructivo</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="instructivo-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 1</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 2</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 3</span>
+                </a>
+              </li>
+            </ul>
+        </li><!-- End Icons Nav -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#normativa-nav" data-bs-toggle="collapse" href="#">
+            <i class="bi bi-folder-fill"></i><span>Normativa</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="normativa-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 1</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 2</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 3</span>
+                </a>
+              </li>
+            </ul>
+        </li><!-- End Icons Nav -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#estudio-nav" data-bs-toggle="collapse" href="#">
+            <i class="bi bi-folder-fill"></i><span>Estudio</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="estudio-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 1</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 2</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 3</span>
+                </a>
+              </li>
+            </ul>
+        </li><!-- End Icons Nav -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#ley-nav" data-bs-toggle="collapse" href="#">
+            <i class="bi bi-folder-fill"></i><span>Ley</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="ley-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 1</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 2</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 3</span>
+                </a>
+              </li>
+            </ul>
+        </li><!-- End Icons Nav -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#boletin-nav" data-bs-toggle="collapse" href="#">
+            <i class="bi bi-folder-fill"></i><span>Boletín</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="boletin-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 1</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 2</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 3</span>
+                </a>
+              </li>
+            </ul>
+        </li><!-- End Icons Nav -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#circulares-nav" data-bs-toggle="collapse" href="#">
+            <i class="bi bi-folder-fill"></i><span>Circulares</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="circulares-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 1</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 2</span>
+                </a>
+              </li>
+              <li>
+                <a >
+                  <i class="bi bi-circle"></i><span>Archivo 3</span>
+                </a>
+              </li>
+            </ul>
+        </li><!-- End Icons Nav -->
     </ul>
 </aside><!-- End Sidebar-->
