--- a/src/app/pages/listdocumentos/listdocumentos.component.html
+++ b/src/app/pages/listdocumentos/listdocumentos.component.html
@@ -4,20 +4,17 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-9">
-                        <h5 class="card-title">Listado de colaboradores</h5>
+                        <h5 class="card-title">Listado de documentos</h5>
                     </div>
                     <div class="col-3 mt-2 d-flex flex-row justify-content-end p-2">
-                        <button type="button" class="btn btn-primary " routerLink="/dashboard/collaborator">
-                            <i class="bi bi-plus-lg"></i>Agregar colaborador
+                        <button type="button" class="btn btn-primary" routerLink="/dashboard/documentos">
+                            <i class="bi bi-plus-lg"></i>Agregar documento
                         </button>
                     </div>
                 </div>
-                <app-datatable></app-datatable>
+                <app-dtdocumentos></app-dtdocumentos>
             </div>
         </div>
     </div>
 </div>
-<!-- <app-collaborator></app-collaborator> -->
-
-<!-- data-bs-toggle="modal" data-bs-target="#ExtralargeModal" -->
 
