--- a/src/app/pages/datatable/datatable.component.html
+++ b/src/app/pages/datatable/datatable.component.html
@@ -1,5 +1,19 @@
+<!-- <div class="d-flex justify-content-center" *ngIf="isLoading">
+    <div class="spinner-border text-success" style="width: 5rem; height: 5rem;" role="status" *ngIf="isLoading">
+      <span class="visually-hidden">Cargando...</span>
+    </div>
+</div> -->
+
+<div class="d-flex justify-content-center loader" *ngIf="isLoading">
+    <div class="orbe" style="--index: 0"></div>
+    <div class="orbe" style="--index: 1"></div>
+    <div class="orbe" style="--index: 2"></div>
+    <div class="orbe" style="--index: 3"></div>
+    <div class="orbe" style="--index: 4"></div>
+</div>
+
 <div class="container table-responsive">
-    <table datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover">
+    <table *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover">
         <thead>
             <tr>
                 <th>N°</th>
