--- a/src/app/pages/documentos/documentos.component.css
+++ b/src/app/pages/documentos/documentos.component.css
@@ -1,45 +1,40 @@
 
-.titulo {
-  /* background-color: rgba(0, 95, 85, 1);
-  color: #FFFFFF; */
-  font-size: 1.5rem;
-}
-
 .card {
-  --border-size: 3px;
-  --border-angle: 0turn;
-  /* width: 60vmin;
-  height: 50vmin; */
-  background-image: conic-gradient( rgb(247, 245, 249), rgb(253, 253, 255) 50%, rgb(250, 247, 252)), conic-gradient(from var(--border-angle), transparent 20%, #08f, #f03);
-  background-size: calc(100% - (var(--border-size) * 2)) calc(100% - (var(--border-size) * 2)), cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  -webkit-animation: bg-spin 3s linear infinite;
-          animation: bg-spin 3s linear infinite;
-}
-@-webkit-keyframes bg-spin {
-  to {
-    --border-angle: 1turn;
+    --border-size: 3px;
+    --border-angle: 0turn;
+    /* width: 60vmin;
+    height: 50vmin; */
+    background-image: conic-gradient( rgb(247, 245, 249), rgb(253, 253, 255) 50%, rgb(250, 247, 252)), conic-gradient(from var(--border-angle), transparent 20%, #08f, #f03);
+    background-size: calc(100% - (var(--border-size) * 2)) calc(100% - (var(--border-size) * 2)), cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    -webkit-animation: bg-spin 3s linear infinite;
+            animation: bg-spin 3s linear infinite;
   }
-}
-@keyframes bg-spin {
-  to {
-    --border-angle: 1turn;
+  @-webkit-keyframes bg-spin {
+    to {
+      --border-angle: 1turn;
+    }
   }
-}
-/* .card:hover {
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
-} */
+  @keyframes bg-spin {
+    to {
+      --border-angle: 1turn;
+    }
+  }
+  /* .card:hover {
+    -webkit-animation-play-state: paused;
+            animation-play-state: paused;
+  } */
+  
+  @property --border-angle {
+    syntax: "<angle>";
+    inherits: true;
+    initial-value: 0turn;
+  }
 
-@property --border-angle {
-  syntax: "<angle>";
-  inherits: true;
-  initial-value: 0turn;
-}
+  /*************************
 
-/****************************
-/* Esto es definir los estilos CSS para un elemento de botón. Establece el relleno, el tamaño de la
+  * Esto es definir los estilos CSS para un elemento de botón. Establece el relleno, el tamaño de la
   fuente, la transformación del texto, el espaciado entre letras, el grosor de la fuente, el color,
   el color de fondo, el borde, el radio del borde, la sombra del cuadro, la transición, el cursor y
   las propiedades del contorno del botón. También define los estilos para cuando se pasa el cursor
