PORTAL: Guardar foto de usuario y cambio de contraseña

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -54,9 +54,6 @@
 </main>
 -->
 
-
-
-
 <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4 background-radial-gradient overflow-hidden">
     <div class="container-fluid h-custom ">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -94,3 +91,36 @@
         </div>
     </div>
 </section>
+
+<!-- <div class="overlay">
+    <form>
+        <div class="con">
+            <header class="head-form">
+                <h2>Log In</h2>
+                <p>login here using your username and password</p>
+            </header>
+            <br />
+            <div class="field-set">
+                <span class="input-item">
+                    <i class="bi bi-person-circle"></i>
+                </span>
+                <input class="form-input" id="txt-input" type="text" placeholder="# DUI" required />
+                <br />
+                <span class="input-item">
+                    <i class="bi bi-key"></i>
+                </span>
+                <input class="form-input" type="password" placeholder="Contraseña" id="pwd" name="password" required />
+                <span>
+                    <i class="bi bi-eye" aria-hidden="true" type="button" id="eye" (click)="seleccionar()"></i>
+                </span>
+                
+                <br />
+                <button class="log-in">Log In</button>
+            </div>
+            <div class="other">
+                <button class="btn submits frgt-pass">Forgot Password</button>
+               
+            </div>
+        </div>
+    </form>
+</div> -->
