--- a/src/app/pages/archivo/archivo.component.html
+++ b/src/app/pages/archivo/archivo.component.html
@@ -1,10 +1,17 @@
 <!-- <h1>Archivo PDF</h1> -->
-<div class="container">
-    <div class="card">
+
+
+<div  class="container">
+    <div  class="card iframe-desvanecer">
+        <!-- <div class="mx-auto loader mt-5" *ngIf="isLoading">
+            <div class="orbe" style="--index: 0"></div>
+            <div class="orbe" style="--index: 1"></div>
+            <div class="orbe" style="--index: 2"></div>
+            <div class="orbe" style="--index: 3"></div>
+            <div class="orbe" style="--index: 4"></div>
+        </div> -->
         <form action="">
-            <iframe src="" type="application/pdf" #myFrame style="width:100%; height:35rem;" frameborder="0" id="filePDF"></iframe>
-        
-            <!-- <embed [src]="archivoUrl"  type="application/pdf" width="100%" height="600px"> -->
+            <iframe class=""  src="" type="application/pdf" #myFrame style="width:100%; height:87vh;" frameborder="0" id="filePDF" allowfullscreen></iframe>
         </form>
     </div>
 </div>
