--- a/src/app/pages/datatable/dtdocumentos/dtdocumentos.component.html
+++ b/src/app/pages/datatable/dtdocumentos/dtdocumentos.component.html
@@ -5,7 +5,7 @@
     </div>
 </div> -->
 
-<div class="d-flex justify-content-center loader" *ngIf="isLoading">
+<div class="mx-auto loader" *ngIf="isLoading">
     <div class="orbe" style="--index: 0"></div>
     <div class="orbe" style="--index: 1"></div>
     <div class="orbe" style="--index: 2"></div>
