--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,19 +1,16 @@
-
-
-
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
                 <div class="form mt-3">
                     <div class="row">
-                        <h1 class="card-title text-center titulo" id="title">Guardar colaborador</h1>
+                        <h1 class="card-title text-center titulo" id="title">Editar perfil</h1>
                         <form [formGroup]="formUser" class="row g-3 " (ngSubmit)="guardar()">
-                            <div class="col-md-2" >
-                                <div class="wrapper">
+                            <div class="col-md-3" >
+                                <div class="wrapper ">
                                     <input  type="file" name="foto" id="foto" accept=".jpg, .png" hidden="hidden" (change)="changeFoto($event)"  />
-                                    <label class="position-relative" for="foto">
-                                        <img *ngIf="!isLoading" src="{{avatar}}" id="img" class="img-fluid rounded-start" alt="..." />
+                                    <label class="position-relative " for="foto">
+                                        <img *ngIf="!isLoading" src="{{avatar}}" id="img" class="img-fluid rounded-start rounded-pill" alt="..." />
                                         <div class="position-absolute w-100 h-100 mx-auto align-items-center">
                                             <div class="mx-auto loader" *ngIf="isLoading">
                                                 <div class="orbe" style="--index: 0"></div>
@@ -26,11 +23,11 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="col-md-10">
+                            <div class="col-md-9">
                                 <div class="row">
                                     <div class="col-md-4 mb-2">
                                         <label class="form-label">Número de documento</label>
-                                        <input type="text" formControlName="dui" class="form-control" id="dui" placeholder="Ingresa el dui" (keypress)="validateFormat($event)"  maxlength="10">
+                                        <input type="text" formControlName="dui" class="form-control" id="dui" placeholder="Ingresa el dui" (keypress)="validateFormat($event)" maxlength="10">
                                         <div class="alert alert-danger mt-2" [hidden]="dui.valid || dui.pristine">
                                             El Dui es obligatorio
                                         </div>
