--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -18,22 +18,22 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                     <li class="dropdown-header">
-                        <h6>Kevin Anderson</h6>
-                        <span>Web Designer</span>
+                        <h6>{{ nombre }} {{ apellido }}</h6>
+                        <span>{{ cargo }}</span>
                     </li>
                     <li>
                         <hr class="dropdown-divider">
                     </li>
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+                        <a class="dropdown-item d-flex align-items-center" (click)="perfil()">
                         <i class="bi bi-person"></i>
-                        <span>My Profile</span>
+                        <span>Mi perfil</span>
                         </a>
                     </li>
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
                         <i class="bi bi-gear"></i>
                         <span>Account Settings</span>
@@ -42,7 +42,7 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                    <li>
+                     <li>
                         <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
                         <i class="bi bi-question-circle"></i>
                         <span>Need Help?</span>
@@ -50,7 +50,7 @@
                     </li>
                     <li>
                         <hr class="dropdown-divider">
-                    </li>
+                    </li> -->
                     <li>
                         <a class="dropdown-item d-flex align-items-center" (click)="logout()">
                             <i class="bi bi-box-arrow-right"></i>
